--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -20,7 +20,7 @@ const wordCountStr = (wordCount / 1000).toFixed(1) + 'k'
       Powered by
       <Link href="https://astro.build/">Astro</Link>
       & Designed by
-      <Link href="https://github.com/lxchapu/astro-gyoza">Gyoza</Link>
+      <Link href="https://github.com/lxchapu/astro-gyoza">秋萍</Link>
     </div>
     <div class="space-x-1">
       <span>&copy;{copyDate} <Link href="/">{author.name}</Link>.</span>
