--- a/src/components/head/PrintVersion.astro
+++ b/src/components/head/PrintVersion.astro
@@ -2,7 +2,7 @@
   import { version } from '@/../package.json'
   
   console.log(
-    `%c Gyoza ${version} %c https://gyoza.lxchapu.com `,
+    `%c 秋萍 ${version} %c https://gyoza.lxchapu.com `,
     'color: #fff; margin: 1em 0; padding: 5px 0; background: #ef8f99;',
     'margin: 1em 0; padding: 5px 0; background: #efefef;'
   )
